2018-02-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp (npySave): Add new option to check directory
	and path before attempting to save

	* R/utils.R (.checkPath): New helper function to check if a
	directory contained in a path exists

2018-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.8

	* vignettes/RcppCNPy-intro.Rmd: Set knitr chunk option
	'python.reticulate=FALSE' to avoid vignette dependency

2017-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.7

	* cleanup: Expanded cleanup

	* vignettes/RcppCNPy-intro.Rmd: Re-built under pinp 0.0.2; also
	disable evaluation if Sys.info() detects the wonders of Windows

2017-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/RcppCNPy-intro.Rmd: Renamed, updated, uses pinp

	* .travis.yml (install): Add edd/misc ppa for r-cran-pinp

	* src/init.c: Added to register dynamic routines

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2016-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.2.6

	* inst/CITATION: Added with new JOSS paper

	* README.md: One more canonical URL

2016-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added Zenodo doi reference

2016-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove one redundant code line

2016-09-21  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'Feedback' section, added JOSS badge

	* man/RcppCNPy-package.Rd: Add examples

2016-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.5

	* vignettes/RcppCNPy-intro.Rnw: Updated vignette, added Wush

	* README.md: Updated, uses canonical URLs for CRAN

2016-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpy.cpp: Carry one small fix over from cnpy upstream; also
	applied to gzfile variant; revert to using 'long long' under C++11
