@@ -1,3 +1,8 @@
+2018-02-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/cnpyMod.cpp (npySave): Operate on bool from R
+	* R/utils.R (.checkPath): Now just returns the dir.exists() result
+
 2018-02-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/cnpyMod.cpp (npySave): Add new option to check directory
